# architecture-sprint-8

./: .gitignore  docker-compose.yaml
api/: Dockerfile  pyproject.toml
api/src/: auth.py  main.py
frontend/src/: App.tsx
keycloak/: realm-export.json
